# NARU

./: .gitignore  .mcp.json  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: macos-build.yml  release.yml
scripts/: gen-macos-signing-cert.sh  release-macos-local.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.smoke.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/agentsessions/: mod.rs
src-tauri/src/browser/: mod.rs
src-tauri/src/kv/: mod.rs
src-tauri/src/orchestrator/: mod.rs
src-tauri/src/procmon/: mod.rs
src-tauri/src/pty/: mod.rs
src-tauri/src/quota/: mod.rs
src-tauri/src/repo/: mod.rs
src-tauri/src/sessioninfo/: mod.rs
src-tauri/src/status/: mod.rs
src-tauri/src/triggers/: mod.rs
src/components/: command-palette.tsx  global-search.tsx  keybindings.tsx  link-context-menu.tsx  notification-manager.tsx  snippet-run-dialog.tsx  trigger-manager.tsx
src/components/browser/: browser-pane.tsx
src/components/chrome/: titlebar.tsx  update-button.tsx
src/components/common/: app-icons.tsx  naru-logo.tsx  tech-icon.tsx  tool-button.tsx
src/components/drawer/: file-icon.tsx  side-drawer.tsx
src/components/pane/: input-bar-model.ts  input-bar.tsx  input-context-chip.tsx  notification-ring.tsx  replay-pane.tsx  runbook-pane.tsx  terminal-pane.tsx  (+2 more)
src/lib/: color.ts  keys.ts  kv-storage.ts  notify.ts  platform.ts  tauri.ts
src/store/: command-history.ts  command.ts  drawer.ts  global-search.ts  keymap.ts  link-menu.ts  overlay.ts  pane-commands.ts  quota.ts  recordings.ts  runbooks.ts  session-info.ts  settings.ts  snippet-run.ts  snippets.ts  ssh-hosts.ts  status.ts  theme.ts  triggers.ts  ui.ts  updater.ts  viewer.ts  workspace-command.ts  workspace.ts
src/terminal/: path-links.ts  recorder.ts  registry.ts  theme.ts
src/theme/: presets.ts
(+14 files in other folders)
