[package]
name = "naru"
version = "0.1.10"
description = "NARU — AI agent control-tower terminal workspace"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "naru_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
base64 = "0.22"
parking_lot = "0.12"
regex = "1"
sysinfo = "0.33"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
getrandom = "0.2"
tauri-plugin-dialog = "2.7.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tauri-plugin-single-instance = "2.4.2"

# In-app self-update (GitHub Releases + signed `latest.json`). The updater is
# desktop-only; `process` powers the post-install relaunch from the frontend.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
url = "2"

# macOS-only: programmatically center the native traffic lights in our custom
# 38px titlebar (and re-apply on resize, which the trafficLightPosition config
# alone doesn't survive — it resets on fullscreen toggle).
[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-decorum = "1"

[profile.release]
opt-level = "s" # desktop app: size over the last few % of speed
lto = true
codegen-units = 1
panic = "abort"
strip = true

